--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "bootstrap-4-utilities",
+  "name": "@iamandrewluca/bootstrap-4-utilities",
   "version": "1.0.0",
   "description": "Bootstrap 4 utilities ported for Bootstrap 3, Sass version",
-  "main": "index.js",
+  "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "css-compile": "node-sass --importer utils/importer.js --output-style expanded --source-map true --source-map-contents true --precision 6 src/utilities.scss dist/utilities.css",
+    "css-watch": "nodemon --watch src/ --ext scss --exec \"npm run css-compile\"",
+    "css-minify": "cleancss --level 1 --format breaksWith=lf --source-map --source-map-inline-sources --output dist/utilities.min.css dist/utilities.css",
+    "css-build": "npm run css-compile && npm run css-minify"
   },
   "repository": {
     "type": "git",
@@ -24,6 +28,12 @@
   },
   "homepage": "https://github.com/iamandrewluca/bootstrap-4-utilities#readme",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "bootstrap-sass": "^3.3.7"
+  },
+  "devDependencies": {
+    "clean-css-cli": "^4.2.1",
+    "node-sass": "^4.9.3",
+    "nodemon": "^1.18.4"
   }
 }
